html half finished

--- a/index.html
+++ b/index.html
@@ -10,11 +10,108 @@
 </head>
 
 <body>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <div class="hero">
+        <h1>Dorota Smosny<span>MSN</span></h1>
+    </div>
+    <section class="welcome">
+        <div class="welcome-left">
+            <img src="dist/img/img1.jpeg" alt="stethoscope" class="">
+        </div>
+        <div class="welcome-middle">
+            <h2>Certified Nurse Executive</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni dolor aliquid officiis! Ad, amet similique
+            </p>
+        </div>
+        <div class="welcome-right">
+            <img src="dist/img/img2.jpeg" alt="graphs" class="">
+        </div>
+    </section>
+
+    <section class="about-me">
+        <img src="dist/img/img4.jpeg" alt="about portrait" class="about-image">
+        <h1 class="about-title"> About Me</h1>
+        <h2 class="about-subtitle">Over 20 years of Experience</h2>
+        <div class="about-text">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni dolor aliquid officiis! Ad, amet
+                similiqueLorem ipsum dolor sit amet consectetur adipisicing elit. Magni dolor aliquid officiis! Ad, amet
+                similique
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni dolor aliquid officiis! Ad, amet
+                similique
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni dolor aliquid officiis! Ad, ametLorem
+                ipsum dolor sit amet consectetur adipisicing elit. Magni dolor aliquid officiis! Ad, amet similique
+                similique
+            </p>
+        </div>
+
+    </section>
+    <section class="portfolio">
+
+        <h1>My Work</h1>
+        <div class="portfolio-items">
+            <!--Portfolio item 1-->
+            <figure class="portfolio-item featured">
+                <img src="/dist/img/img1.jpeg" alt="first image">
+                <figcaption>
+                    <h3 class="portfolio-title">Clinical</h3>
+                    <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        dolor aliquid officiis! Ad, ametLorem</p>
+                    <a href="#" class="portfolio-link">Read More</a>
+                </figcaption>
+            </figure>
+            <figure class="portfolio-item">
+                <img src="/dist/img/img1.jpeg" alt="first image">
+                <figcaption>
+                    <h3 class="portfolio-title">Clinical</h3>
+                    <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        dolor aliquid officiis! Ad, ametLorem</p>
+                    <a href="#" class="portfolio-link">Read More</a>
+                </figcaption>
+            </figure>
+            <figure class="portfolio-item">
+                <img src="/dist/img/img1.jpeg" alt="first image">
+                <figcaption>
+                    <h3 class="portfolio-title">Clinical</h3>
+                    <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        dolor aliquid officiis! Ad, ametLorem</p>
+                    <a href="#" class="portfolio-link">Read More</a>
+                </figcaption>
+            </figure>
+            <figure class="portfolio-item">
+                <img src="/dist/img/img1.jpeg" alt="first image">
+                <figcaption>
+                    <h3 class="portfolio-title">Clinical</h3>
+                    <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        dolor aliquid officiis! Ad, ametLorem</p>
+                    <a href="#" class="portfolio-link">Read More</a>
+                </figcaption>
+            </figure>
+            <figure class="portfolio-item">
+                <img src="/dist/img/img1.jpeg" alt="first image">
+                <figcaption>
+                    <h3 class="portfolio-title">Clinical</h3>
+                    <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        dolor aliquid officiis! Ad, ametLorem</p>
+                    <a href="#" class="portfolio-link">Read More</a>
+                </figcaption>
+            </figure>
+            <figure class="portfolio-item">
+                <img src="/dist/img/img1.jpeg" alt="first image">
+                <figcaption>
+                    <h3 class="portfolio-title">Clinical</h3>
+                    <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
+                        dolor aliquid officiis! Ad, ametLorem</p>
+                    <a href="#" class="portfolio-link">Read More</a>
+                </figcaption>
+            </figure>
+        </div>
+
+    </section>
 
     <script src="dist/js/app.js"></script>
+
 </body>
 
 </html>
