--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <section class="welcome">
         <div class="welcome-left">
-            <img src="dist/img/img1.jpeg" alt="stethoscope" class="">
+            <img src="dist/img/img1.jpg" alt="stethoscope" class="">
         </div>
         <div class="welcome-middle">
             <h2>Certified Nurse Executive</h2>
@@ -28,7 +28,7 @@
     </section>
 
     <section class="about-me">
-        <img src="dist/img/img4.jpeg" alt="about portrait" class="about-image">
+        <img src="dist/img/img4.jpg" alt="about portrait" class="about-image">
         <h1 class="about-title"> About Me</h1>
         <h2 class="about-subtitle">Over 20 years of Experience</h2>
         <div class="about-text">
@@ -53,7 +53,7 @@
         <div class="portfolio-items">
             <!--Portfolio item 1-->
             <figure class="portfolio-item featured">
-                <img src="/dist/img/img1.jpeg" alt="first image">
+                <img src="/dist/img/img1.jpg" alt="first image">
                 <figcaption>
                     <h3 class="portfolio-title">Clinical</h3>
                     <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
@@ -62,7 +62,7 @@
                 </figcaption>
             </figure>
             <figure class="portfolio-item">
-                <img src="/dist/img/img1.jpeg" alt="first image">
+                <img src="/dist/img/img1.jpg" alt="first image">
                 <figcaption>
                     <h3 class="portfolio-title">Clinical</h3>
                     <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
@@ -71,7 +71,7 @@
                 </figcaption>
             </figure>
             <figure class="portfolio-item">
-                <img src="/dist/img/img1.jpeg" alt="first image">
+                <img src="/dist/img/img1.jpg" alt="first image">
                 <figcaption>
                     <h3 class="portfolio-title">Clinical</h3>
                     <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
@@ -80,7 +80,7 @@
                 </figcaption>
             </figure>
             <figure class="portfolio-item">
-                <img src="/dist/img/img1.jpeg" alt="first image">
+                <img src="/dist/img/img1.jpg" alt="first image">
                 <figcaption>
                     <h3 class="portfolio-title">Clinical</h3>
                     <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
@@ -89,7 +89,7 @@
                 </figcaption>
             </figure>
             <figure class="portfolio-item">
-                <img src="/dist/img/img1.jpeg" alt="first image">
+                <img src="/dist/img/img1.jpg" alt="first image">
                 <figcaption>
                     <h3 class="portfolio-title">Clinical</h3>
                     <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
@@ -98,7 +98,7 @@
                 </figcaption>
             </figure>
             <figure class="portfolio-item">
-                <img src="/dist/img/img1.jpeg" alt="first image">
+                <img src="/dist/img/img1.jpg" alt="first image">
                 <figcaption>
                     <h3 class="portfolio-title">Clinical</h3>
                     <p class="portfolio-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni
