--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/styles/main.css">
+    <script src="https://kit.fontawesome.com/bc84532074.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -109,8 +110,38 @@
         </div>
 
     </section>
+    <section class="contacts">
+        <h1>Contact Me</h1>
+        <form action="submit">
+            <label class="name">Name:
+                <input type="text" id="name">
+            </label>
+            <label class="email">Email:
+                <input type="email" id="email">
+            </label>
+            <label message="message">Message:
+                <textarea name="" id="message"></textarea>
+            </label>
+        </form>
+    </section>
+    <footer>
+        <p>Follow Me on Social Media</p>
+        <div class=social-icons>
+            <a href="http://linkedin.com">
+                <i class="fab fa-linkedin-in icon"></i>
+            </a>
+            <a href="http://facebook.com">
+                <i class="fab fa-facebook icon"></i>
+            </a>
+            <a href="http://instagram.com">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <p class="copyright"> &copy; Dorota Smosny 2019</p>
 
+        </div>
+    </footer>
     <script src="dist/js/app.js"></script>
+
 
 </body>
 
