--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dorota Smosny: Nurse Executive</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="dist/styles/main.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/bc84532074.js" crossorigin="anonymous"></script>
 </head>
 
